# dit-cli

./: .gitignore  README.md  README.rst  pyproject.toml  pyrightconfig.json  pytest.ini
archive/: run_tests.sh
dit_cli/: __init__.py  __main__.py  assigner.py  built_in.py  cli.py  color.py  config.py  data_classes.py  dataclasses.py  dit.py  errors.py  evaler.py  exceptions.py  grammar.py  interpret_context.py  interpreter.py  lang_daemon.py  namespace.py  node.py  object.py  oop.py  parser.py  preprocessor.py  settings.py  tree.py
dit_cli/client_daemons/: js_daemon.js  lua_daemon.lua  py_daemon.py
dit_cli/tests/: fail.dit  test_dit_cli.py
docs/: FeatureRoadmap.md  whats-the-point.md
docs/RFCs/: 0001-principles.md  0002-syntax-overhaul-for-functions.md
examples/: Tutorial.dit  coin.dit  fruit.dit  import.dit  inheritance.dit  length.dit  loops.dit  name-conflicts.dit  name.dit  payloads.dit  recursion.dit  school.dit
examples/feature-ideas/: JSON.dit  calculator.dit  coin.dit  database.dit  dynamic-class.dit  functions.dit  import-functions.dit  import-functions2.dit  latex.dit  new-fruit.dit  new-lengths.dit  payloads.dit  syntax-enums-functions.dit
socket-experiments/: README.md  c_socket.c  c_system.c  c_system_exec  js_daemon.js  js_hello_world.js  js_script.js  js_script2.js  py_daemon.py  py_script.py  py_script2.py  socket_server.py
tests/: .ditconf  conftest.py  fail.dit  import.dit  import2.dit  import_fail.dit  lang1.dit  lang2.dit  old_te_st.py  pyodide.js  test_d.py  test_dit_cli.py
tests/dits/: array.dit  assignment-enum.dit  assignment-test.dit  basic.dit  (+35 more)
(+88 files in other folders)
