[tool.poetry]
name = "dit-cli"
version = "0.5.1"
description = "The CLI for dit"
license = "GPL-3.0-or-later"
authors = ["Isaiah Shiner <shiner.isaiah@gmail.com>"]
readme = "README.md"
homepage="https://www.ditabase.io/"
classifiers=[
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
dit = "dit_cli.cli:main"

[tool.isort]
multi_line_output=3
include_trailing_comma = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

